프로젝트 기초 업로드

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	implementation 'com.zaxxer:HikariCP'
+	implementation 'org.mariadb.jdbc:mariadb-java-client'
 }
 
 test {
