--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+spring.datasource.url=jdbc:log4jdbc:mysql://maria-db.halfclub.com:3306/ecomms?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.jdbcUrl=jdbc:mysql://maria-db.halfclub.com:3306/ecomms?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=admin
+spring.datasource.password=tricycle12
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+
+spring.datasource2.url=jdbc:log4jdbc:postgresql://db.halfclub.com:5432/ecommerce?currentSchema=ecomms
+spring.datasource2.jdbcUrl=jdbc:postgresql://db.halfclub.com:5432/ecommerce?currentSchema=ecomms
+spring.datasource2.username=service_bo
+spring.datasource2.password=tricycle1@bo
+spring.datasource2.driverClassName=org.postgresql.Driver
+spring.datasource2.type=com.zaxxer.hikari.HikariDataSource
+server.port=80
