--- a/build.gradle
+++ b/build.gradle
@@ -118,6 +118,7 @@ dependencyManagement {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-undertow'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
 	compileOnly 'org.projectlombok:lombok'
@@ -126,11 +127,14 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	//providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+	
+	implementation 'com.zaxxer:HikariCP'
+	implementation 'org.mariadb.jdbc:mariadb-java-client'
+	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-	implementation 'com.zaxxer:HikariCP'
-	implementation 'org.mariadb.jdbc:mariadb-java-client'
+	testImplementation 'org.springframework.batch:spring-batch-test'
 }
 
 test {
