--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 
+spring.profiles.active=prod
+
 spring.datasource.url=jdbc:log4jdbc:mysql://maria-db.halfclub.com:3306/ecomms?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.jdbcUrl=jdbc:mysql://maria-db.halfclub.com:3306/ecomms?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=admin
