--- a/build.gradle
+++ b/build.gradle
@@ -140,3 +140,8 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
+bootRun {
+    String activeProfile = System.properties['spring.profiles.active']
+    systemProperty "spring.profiles.active", activeProfile
+}
