--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -94,7 +94,20 @@ logging:
  #   org.hibernate.SQL: DEBUG
  #   org.hibernate.type.descriptor.sql: TRACE
  #   jdbc.resultset: ERROR  
-  config: classpath:config/logback-spring.xml
+ # config: classpath:config/logback-spring.xml
+ path: /home/ec2-user/log/gate
+  level:
+    ROOT: INFO
+    tricycle: DEBUG
+    org.springframework.boot: INFO
+#    org.springframework.boot.autoconfigure.logging.ConditionEvaluationReportLoggingListener.debug: DEBUG
+#    org.springframework.boot.devtools: DEBUG
+    org.springframework.web: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql: TRACE
+#    org.springframework.cloud.netflix.eureka: TRACE
+#    com.netflix.eureka: TRACE
+
 
 mybatis:
   mapper-locations: classpath:mapper/**/*.xml
