--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -82,20 +82,7 @@ spring:
 
 
 logging:
- # path: ./log
- # pattern:
- #   console: ${CONSOLE_LOG_PATTERN:%clr(%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m (%file:%line\) %n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}}
- #   file:  ${CONSOLE_LOG_PATTERN:%clr(%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m (%file:%line\) %n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}}
- # level:
- #   ROOT: INFO
- #   tricycle: DEBUG
- #   org.springframework.boot: INFO
- #   org.springframework.web: DEBUG
- #   org.hibernate.SQL: DEBUG
- #   org.hibernate.type.descriptor.sql: TRACE
- #   jdbc.resultset: ERROR  
- # config: classpath:config/logback-spring.xml
- path: /home/ec2-user/log/gate
+  path: /home/ec2-user/log/${spring.application.name}
   level:
     ROOT: INFO
     tricycle: DEBUG
@@ -107,6 +94,7 @@ logging:
     org.hibernate.type.descriptor.sql: TRACE
 #    org.springframework.cloud.netflix.eureka: TRACE
 #    com.netflix.eureka: TRACE
+
 
 
 mybatis:
