로그 레벨 변경

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -101,13 +101,13 @@ spring:
 logging:
   path: /home/ec2-user/log/gate
   level:
-    ROOT: TRACE
-    tricycle: TRACE
-    org.springframework.boot: TRACE
-#    org.springframework.boot.autoconfigure.logging.ConditionEvaluationReportLoggingListener.debug: DEBUG
-#    org.springframework.boot.devtools: DEBUG
-    org.springframework.web: TRACE
-    org.hibernate.SQL: TRACE
+    ROOT: INFO
+    tricycle: DEBUG
+    org.springframework.boot: INFO
+    #    org.springframework.boot.autoconfigure.logging.ConditionEvaluationReportLoggingListener.debug: DEBUG
+    #    org.springframework.boot.devtools: DEBUG
+    org.springframework.web: DEBUG
+    org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql: TRACE
 #    org.springframework.cloud.netflix.eureka: TRACE
 #    com.netflix.eureka: TRACE
